--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </header>
       <p>Mi objetivo es inmortalizar los momentos más emocionantes en el campo de juego, desde las jugadas llenas de energía hasta las celebraciones que quedan en la memoria. Cada fotografía es un recuerdo único para jugadores y familias.</p>
       <figure>
-        <a href="imagenes/_CFD3479.jpg" target="_blank">
-          <img src="imagenes/_CFD3479 - copia.jpg" alt="Partido de fútbol infantil">
+        <a href="imagenes/CFD3479.jpg" target="_blank">
+          <img src="imagenes/CFD3479 - copia.jpg" alt="Partido de fútbol infantil">
         </a>
         <figcaption>Jugada destacada en torneo regional</figcaption>
       </figure>
@@ -66,8 +66,8 @@
       </header>
       <p>Más allá de la técnica, busco que cada retrato cuente una historia, transmitiendo la personalidad y emociones del sujeto, ya sea en un evento familiar o en una sesión individual.</p>
       <figure>
-        <a href="imagenes/_CFD6701.jpg" target="_blank">
-          <img src="imagenes/_CFD6701 - copia.jpg" alt="Retrato artístico">
+        <a href="imagenes/CFD6701.jpg" target="_blank">
+          <img src="imagenes/CFD6701 - copia.jpg" alt="Retrato artístico">
         </a>
         <figcaption>Retrato con luz natural</figcaption>
       </figure>
@@ -116,3 +116,4 @@
 </script>
 </body>
 </html>
+
