--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <meta name="description" content="Portafolio Fotográfico de Carlos Delgado">
 <meta name="keywords" content="fotografía, deporte, retratos, eventos, portafolio">
@@ -116,4 +117,5 @@
 </script>
 </body>
 </html>
+
 
